infrastructure/logstash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      volumes:
      - name: logstash-pipelines
        configMap:
          name: logstash-pipelines
      - name: logstash-patterns
        configMap:
          name: logstash-patterns
      - name: elasticsearch-es-http-certs-public
        secret:
          secretName: elasticsearch-es-http-certs-public

      containers:
      - name: logstash
        image: logstash:7.16.3
        volumeMounts:
        - name: logstash-pipelines
          mountPath: /usr/share/logstash/pipeline
        - name: logstash-patterns
          mountPath: /usr/share/logstash/patterns
        - name: elasticsearch-es-http-certs-public
          mountPath: /usr/share/logstash/config/ca.crt
          subPath: ca.crt
        ports:
        - containerPort: 5140
          name: syslog
          protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: logstash-service
  labels:
    app: logstash
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: logstash
  ports:
  - protocol: UDP
    port: 5140
    targetPort: syslog
